--- a/Amazon_Webpage.html/Amazon_Code+CSS.html
+++ b/Amazon_Webpage.html/Amazon_Code+CSS.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon</title>
+    <title>Online Shopping Site in India:Shop Online for Mobiles, Books, Watches, Shoes and More - Amazon.in</title>
+    <link rel="icon" href="amazon_favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <style>
 
