--- a/Amazon_Webpage.html/Amazon_Code+CSS.html
+++ b/Amazon_Webpage.html/Amazon_Code+CSS.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Shopping Site in India:Shop Online for Mobiles, Books, Watches, Shoes and More - Amazon.in</title>
+    <title>Online Shopping Site in India: Shop Online for Mobiles, Books, Watches, Shoes and More - Amazon.in</title>
     <link rel="icon" href="amazon_favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <style>
@@ -423,7 +423,7 @@ span {
                 <select class="search-select ">
                     <option>All</option>
                 </select>
-                <input class="search-input" placeholder="search-amazon">
+                <input class="search-input" placeholder="Search Amazon.in">
                 <div class="search-icon border">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
